[[release-notes]]
= Release Notes
include::include.adoc[]
:SpecClassFileSelector: https://github.com/spockframework/spock/blob/03818ed010f4b4ca1136a292e214f79d518c4abe/spock-core/src/main/java/org/spockframework/buildsupport/ant/SpecClassFileSelector.java
:scriptselector: {spock-example-project}/blob/963fd34d1609b7025ba92502483ce31b2c6d9d0a/build.xml#L167-L176

== 2.5 (tbd)

== 2.4 (2025-12-11)

_This is a summary of the highlights of the milestone releases_

=== Highlights

* Add support for Groovy 5.0 spockIssue:2196[]
* Add support for combining two or more data providers using Cartesian product spockIssue:1062[]
* Add support for a `filter` block after a `where` block to filter out unwanted iterations spockPull:1927[]
* Add <<extensions.adoc#block-listener,`IBlockListener`>> extension point to listen to block execution events within feature methods spockPull:1575[]
* Add support for defining condition blocks with implicit assertions in helper methods annotated with `@Verify` or `@VerifyAll` spockPull:2112[]
* Add support for pluggable <<extensions.adoc#mock-makers,mock makers>> loaded via ServiceLoader spockPull:1746[]
** This allows external libraries to contribute mocking logic to Spock and use the same API for the users
** You can select the used mock maker during mock creation: `Mock(mockMaker:MockMakers.byteBuddy)`
* Add <<extensions.adoc#mock-makers-mockito,mockito>> mock maker spockPull:1753[] which supports:
** Mocking of final classes and final methods
** Mocking of static methods
** Mocking of classes and interface from different classloaders spockPull:1878[]
** Requires `org.mockito:mockito-core` >= 4.11 in the test class path
* Add support for mocking of static methods also for Java code with the new API `SpyStatic()` spockPull:1756[]
** The <<interaction_based_testing.adoc#static-mocks,static mock methods>> will delegate the creation to the mock makers