@@ -6,6 +6,11 @@ include::include.adoc[]
 
 == 2.5 (tbd)
 
+
+=== Misc
+
+* Make Groovy major version parsing more robust for groovy-eclipse-compiler spockIssue:2282[]
+
 == 2.4 (2025-12-11)
 
 _This is a summary of the highlights of the milestone releases_
